--- a/MyTestLibrary/MyTestLibrary.csproj
+++ b/MyTestLibrary/MyTestLibrary.csproj
@@ -6,7 +6,7 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 		<IsPackable>true</IsPackable>
-		<PackageId>ServantSoftware.Data.Json</PackageId>
+		<PackageId>ServantSoftware.MyTestLibrary</PackageId>
 		<Authors>Servant Software LLC</Authors>
 		<Product>MyTestLibrary</Product>
 		<RepositoryUrl>https://github.com/Servant-Software-LLC/ArmDot-CI-Example</RepositoryUrl>
